syntax = "proto3";
package xsuportal.proto.services.account;
option go_package = "github.com/isucon/isucon10-final/proto/services/account";

message SignupRequest {
  string contestant_id = 1;
  string password = 2;
}

message SignupResponse {
  enum Status {
    SUCCEEDED = 0;
    FAILED = 1;
  }
  Status status = 1;
  string error = 2;
}
